[package]
name = "nvidia_riva"
version = "0.2.0"
authors = [
    "Aleksei Bogdanov <abo@datacorp.ee>",
    "Aleksei Sidorov <sauron1987@gmail.com>"
]
categories = ["network-programming"]
edition = "2021"
homepage = "https://github.com/jettycloud/nvidia-riva-rs"
keywords = ["client", "grpc", "riva", "jarvis"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/jettycloud/nvidia-riva-rs"
description = "The rust language implementation of gRPC client for nvidia riva."

[dependencies]
prost = "0.11"
prost-types = "0.11"
tonic = "0.9"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.20", features = ["time", "test-util", "fs", "macros", "sync", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9"
